crates/qwik-optimizer-oxc/tests/snapshots/example_renamed_exports.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$ as Component, $ as onRender, useStore } from "@qwik.dev/core";

export const App = Component((props) => {
  const state = useStore({ thing: 0 });

  return onRender(() => <div>{state.thing}</div>);
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_XumqEURaLxI = () => import("./test.tsx_App_component_XumqEURaLxI");
const i_Ma8uJBKLX2o = () => import("./test.tsx_s__Ma8uJBKLX2o");
import { useStore } from "@qwik.dev/core";
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XumqEURaLxI, "App_component_XumqEURaLxI"),
);

=== test.tsx_App_component_XumqEURaLxI.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_Ma8uJBKLX2o = () => import("./test.tsx_s__Ma8uJBKLX2o");
import { useStore } from "@qwik.dev/core";
export const App_component_XumqEURaLxI = (props) => {
  const state = useStore({ thing: 0 });
  return /* @__PURE__ */ qrl(i_Ma8uJBKLX2o, "s__Ma8uJBKLX2o", [state]);
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XumqEURaLxI",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XumqEURaLxI",
  "canonicalFilename": "test.tsx_App_component_XumqEURaLxI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_s__Ma8uJBKLX2o.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
export const s__Ma8uJBKLX2o = () => {
  const state = _captures[0];
  return /* @__PURE__ */ _jsxSorted("div", null, null, state.thing, 3, "u6_0");
};

/*
{
  "origin": "test.tsx",
  "name": "s__Ma8uJBKLX2o",
  "entry": null,
  "displayName": "test.tsx_s_",
  "hash": "Ma8uJBKLX2o",
  "canonicalFilename": "test.tsx_s__Ma8uJBKLX2o",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_App_component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "captureNames": [
    "state"
  ]
}
*/
