crates/qwik-optimizer-oxc/tests/snapshots/example_server_auth.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import GitHub from '@auth/core/providers/github'
import Facebook from 'next-auth/providers/facebook'
import Google from 'next-auth/providers/google'
import {serverAuth$, auth$} from '@auth/qwik';

export const { onRequest, logout, getSession, signup } = serverAuth$({
	providers: [
	GitHub({ clientId: process.env.GITHUB_ID, clientSecret: process.env.GITHUB_SECRET }),
	Facebook({ clientId: import.meta.env.FACEBOOK_ID, clientSecret: import.meta.env.FACEBOOK_SECRET }),
	Google({ clientId: process.env.GOOGLE_ID, clientSecret: process.env.GOOGLE_SECRET })
	]
});

export const { onRequest, logout, getSession, signup } = auth$({
	providers: [
	GitHub({ clientId: process.env.GITHUB_ID, clientSecret: process.env.GITHUB_SECRET }),
	Facebook({ clientId: process.env.FACEBOOK_ID, clientSecret: process.env.FACEBOOK_SECRET }),
	Google({ clientId: process.env.GOOGLE_ID, clientSecret: process.env.GOOGLE_SECRET })
	]
});

=== test.js ===
import { serverAuthQrl } from "@qwik.dev/core";
import { authQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_7qRdElk79Fw = () => import("./test.tsx_s_0_7qRdElk79Fw");
const i_axfrT8CMT4s = () => import("./test.tsx_s_1_axfrT8CMT4s");
import GitHub from "@auth/core/providers/github";
import Facebook from "next-auth/providers/facebook";
import Google from "next-auth/providers/google";
import { serverAuth$, auth$ } from "@auth/qwik";
export const { onRequest, logout, getSession, signup } = serverAuthQrl(/* @__PURE__ */ qrl(i_7qRdElk79Fw, "s_0_7qRdElk79Fw"));
export const { onRequest, logout, getSession, signup } = authQrl(/* @__PURE__ */ qrl(i_axfrT8CMT4s, "s_1_axfrT8CMT4s"));

=== test.tsx_s_0_7qRdElk79Fw.js === (ENTRY)
import GitHub from "@auth/core/providers/github";
import Facebook from "next-auth/providers/facebook";
import Google from "next-auth/providers/google";
export const s_0_7qRdElk79Fw = { providers: [
	GitHub({
		clientId: process.env.GITHUB_ID,
		clientSecret: process.env.GITHUB_SECRET
	}),
	Facebook({
		clientId: import.meta.env.FACEBOOK_ID,
		clientSecret: import.meta.env.FACEBOOK_SECRET
	}),
	Google({
		clientId: process.env.GOOGLE_ID,
		clientSecret: process.env.GOOGLE_SECRET
	})
] };

/*
{
  "origin": "test.tsx",
  "name": "s_0_7qRdElk79Fw",
  "entry": null,
  "displayName": "test.tsx_s_0",
  "hash": "7qRdElk79Fw",
  "canonicalFilename": "test.tsx_s_0_7qRdElk79Fw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "serverAuth$",
  "captures": false
}
*/

=== test.tsx_s_1_axfrT8CMT4s.js === (ENTRY)
import GitHub from "@auth/core/providers/github";
import Facebook from "next-auth/providers/facebook";
import Google from "next-auth/providers/google";
export const s_1_axfrT8CMT4s = { providers: [
	GitHub({
		clientId: process.env.GITHUB_ID,
		clientSecret: process.env.GITHUB_SECRET
	}),
	Facebook({
		clientId: process.env.FACEBOOK_ID,
		clientSecret: process.env.FACEBOOK_SECRET
	}),
	Google({
		clientId: process.env.GOOGLE_ID,
		clientSecret: process.env.GOOGLE_SECRET
	})
] };

/*
{
  "origin": "test.tsx",
  "name": "s_1_axfrT8CMT4s",
  "entry": null,
  "displayName": "test.tsx_s_1",
  "hash": "axfrT8CMT4s",
  "canonicalFilename": "test.tsx_s_1_axfrT8CMT4s",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "auth$",
  "captures": false
}
*/
