crates/qwik-optimizer-oxc/tests/snapshots/example_skip_transform.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.js ===
import { _jsxSorted } from "@qwik.dev/core";
export const handler = $(() => console.log("hola"));
export const App = component$((props) => {
	useStyles$("hola");
	return $(() => /* @__PURE__ */ _jsxSorted("div", null, null, state.thing, 3, "u6_0"));
});
