crates/qwik-optimizer-oxc/tests/snapshots/example_strip_exports_unused.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$ } from '@qwik.dev/core';
import mongodb from 'mongodb';

export const onGet = () => {
	const data = mongodb.collection.whatever;
	return {
		body: {
		data
		}
	}
};

export default component$(()=> {
	return <div>cmp</div>
});

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_jN9ZUuuADmk = () => import("./test.tsx_default_component_jN9ZUuuADmk");
import mongodb from "mongodb";
export const onGet = () => {
	throw "Symbol removed by Qwik Optimizer, it can not be called from current platform";
};
export default /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_jN9ZUuuADmk, "default_component_jN9ZUuuADmk"));

=== test.tsx_default_component_jN9ZUuuADmk.tsx === (ENTRY)
export const default_component_jN9ZUuuADmk = () => {
	return <div>cmp</div>;
}

/*
{
  "origin": "test.tsx",
  "name": "default_component_jN9ZUuuADmk",
  "entry": null,
  "displayName": "test.tsx_default_component",
  "hash": "jN9ZUuuADmk",
  "canonicalFilename": "test.tsx_default_component_jN9ZUuuADmk",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
