crates/qwik-optimizer-oxc/tests/snapshots/example_strip_exports_used.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useResource$ } from '@qwik.dev/core';
import mongodb from 'mongodb';

export const onGet = () => {
	const data = mongodb.collection.whatever;
	return {
		body: {
		data
		}
	}
};

export default component$(()=> {
	useResource$(() => {
		return onGet();
	})
	return <div>cmp</div>
});

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_jN9ZUuuADmk = () => import("./test.tsx_default_component_jN9ZUuuADmk");
const i_Qfn0duyjgAo = () => import("./test.tsx_default_useResource_Qfn0duyjgAo");
import mongodb from "mongodb";
export const onGet = () => {
	throw "Symbol removed by Qwik Optimizer, it can not be called from current platform";
};
export default /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_jN9ZUuuADmk, "default_component_jN9ZUuuADmk"));

=== test.tsx_default_component_jN9ZUuuADmk.tsx === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_Qfn0duyjgAo = () => import("./test.tsx_default_useResource_Qfn0duyjgAo");
import { useResourceQrl } from "@qwik.dev/core";
export const default_component_jN9ZUuuADmk = () => {
	useResourceQrl(/* @__PURE__ */ qrl(i_Qfn0duyjgAo, "default_useResource_Qfn0duyjgAo"));
	return <div>cmp</div>;
}

/*
{
  "origin": "test.tsx",
  "name": "default_component_jN9ZUuuADmk",
  "entry": null,
  "displayName": "test.tsx_default_component",
  "hash": "jN9ZUuuADmk",
  "canonicalFilename": "test.tsx_default_component_jN9ZUuuADmk",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_default_useResource_Qfn0duyjgAo.tsx === (ENTRY)
import { onGet } from "./test";
export const default_useResource_Qfn0duyjgAo = () => {
	return onGet();
};

/*
{
  "origin": "test.tsx",
  "name": "default_useResource_Qfn0duyjgAo",
  "entry": null,
  "displayName": "test.tsx_default_useResource",
  "hash": "Qfn0duyjgAo",
  "canonicalFilename": "test.tsx_default_useResource_Qfn0duyjgAo",
  "path": "",
  "extension": "tsx",
  "parent": "test.tsx_default_component",
  "ctxKind": "function",
  "ctxName": "useResource$",
  "captures": false
}
*/
